# pygame-examples

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
common/: constants.py  file_helpers.py  helpers.py
common/assets/fonts/: __init__.py
common/assets/sounds/combo_sounds/: __init__.py
common/assets/sounds/glass_clinks/: __init__.py
common/assets/sounds/rock_clacks/: __init__.py
common/managers/: audio_manager.py  font_manager.py  managers.py
common/match3/: backend_puzzle.py  events.py  frontend_puzzle.py  frontend_puzzle_particle_system.py  gem.py  gem_assets.py  gem_types.py  helpers.py  player_actions.py
examples/1_cards/: example.py
examples/2_match_three/: example.py
